--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
     "vue-ydui": "^1.2.6",
+    "vuex": "^3.0.1",
     "ydui-district": "^1.1.0"
   },
   "devDependencies": {
