--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "better-scroll": "^1.13.2",
     "fastclick": "^1.0.6",
     "vue": "^2.5.2",
+    "vue-lazyload": "^1.2.6",
     "vue-router": "^3.0.1",
     "vue-ydui": "^1.2.6",
     "vuex": "^3.0.1",
